@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04r: *********************************
 
+IMP/MAN: (6/14/06, SMR) Can now drag cells or cell groups from the explorer
+     tree to another library in the tree, which does a cross-library copy (Bug #630).
+
 IMP/MAN: (6/14/06, GVG) Changes in GeneralTab/IO/FileTypeGroup dialog to accomodate
 resetting of default values. These changes cover Bugzilla #397 and #1021.
 
